# python-flask

./: README.md  pyproject.toml
jogoteca/: config.py  jogoteca.py  prepare_db.py  views.py
jogoteca/templates/: editar.html  lista.html  novo.html  template.html
pythonProject/: jogoteca.py
pythonProject/templates/: lista.html  login.html  novo.html
