[tool.poetry]
name = "python-flask"
version = "0.1.0"
description = ""
authors = ["Douglas Henrique <douglas.ferreira@inventvision.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
