[tool.poetry]
name = "python-flask"
version = "0.1.0"
description = ""
authors = ["Douglas Henrique"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
Flask-WTF = "^1.2.1"
Flask-MySQL = "^1.5.2"
mysql-connector-python = "^8.3.0"
Flask-Bcrypt = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
